Layout container size

--- a/css/modules/orientalfood.css
+++ b/css/modules/orientalfood.css
@@ -1,6 +1,9 @@
 .orientalfood{
     margin-left: 24px;
     margin-right: 24px;
+    display: flex;
+    flex-direction: column;
+    
 }
 .orientalfood h1{
     margin-bottom: 24px;
@@ -12,16 +15,13 @@
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     width: 280px;
-    margin-right: 10px;
     line-height: 25.6px;
 }
 .btn-menu{
-    
-    border: 3px solid green;
     margin-top: 26px;
     padding: 0;
     border: 0;
-    width: 286px;
+    width: 312px;
     height: 40px;
     background-color: #DA2535;
     border-radius: 6px;
