more-popular section

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("../css/modules/orientalfood.css");
 @import url("../css/modules/presentation.css");
 @import url("../css/modules/main.css");
+@import url("../css/modules/more-popular.css");
 
 /* Figma Layout
 https://www.figma.com/file/Yb9IBH56g7T1hdIyZ3BMNO/Desafios---Codel%C3%A2ndia?node-id=107523%3A1216&t=q2v2ITzlzSX0glwf-0
