--- a/css/modules/presentation.css
+++ b/css/modules/presentation.css
@@ -1,13 +1,19 @@
 .presentation{
-    margin-top: 55px;
+    padding: 0 10px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .presentation img{
-    width: 312;
-    margin-left: 24px;
-    margin-right: 24px;
+    padding-top: 20px;
+    width: 100%;
+    max-width: 380px;
+    text-align: center;
+}
+
+.img-container{
+    margin: 30px;
 }
 
 .presentation h3{
@@ -21,13 +27,10 @@
 }
 
 .presentation-description{
-    width: 312;
-    margin-left: 24px;
-    margin-right: 24px;
+    width: 280px;
 }
-
 .presentation p{
-    width: 300px;
+    width: 270px;
     font-family: 'inter', sans-serif;
     font-weight: 400;
     text-align: center;
