--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url("../css/modules/presentation.css");
 @import url("../css/modules/main.css");
 @import url("../css/modules/more-popular.css");
+@import url("../css/modules/coments.css");
 @import url("../css/modules/responsive.css");
 
 /* Figma Layout
